Implement inline Zhiyan capsules (#13)
